actually fixed placeholder alignment this time

--- a/application/frontend/src/components/Modals/PostModal.module.css
+++ b/application/frontend/src/components/Modals/PostModal.module.css
@@ -214,3 +214,9 @@
     width: 100%;
 }
 
+.post-comments-placeholder{
+    margin-left: 15px;
+}
+
+
+
